deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: facerek
    app.kubernetes.io/name: facerek
  name: facerek
