deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facerek-api
  namespace: facerek
spec:
  replicas: 2
  selector:
    matchLabels:
      app: facerek-api
  template:
    metadata:
      labels:
        app: facerek-api
    spec:
      containers:
        - name: facerek-api-container
          image: 774218618828.dkr.ecr.us-east-2.amazonaws.com/facerek-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
