deployment/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: facerek-api
  namespace: facerek
spec:
  selector:
    app: facerek-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080  # Optional: Define a specific NodePort (range: 30000-32767)
  type: NodePort
