deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: facerek-api-service
  namespace: facerek
spec:
  selector:
    app: facerek-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
    - protocol: TCP
      port: 443
      targetPort: 8000
      name: https
  type: LoadBalancer
