deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facerek-ingress
  namespace: facerek
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: facerek.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facerek-api-service
                port:
                  number: 80
